src/Samples/Common/Views/Errors/MarkupControlPropertiesSameName.dothtml
@viewModel object

<!DOCTYPE html>

<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
<head>
    <meta charset="utf-8" />
    <title></title>
</head>
<body>
    <sample:MarkupControlPropertiesSameName MyProperty="1" />
</body>
</html>


